Add partitioning for cache slots & replicas